2006-07-21  Dan Winship  <danw@novell.com>

	* libsoup/soup-message-server-io.c (get_response_headers): If the
	server handler set a Content-Length header on the message, don't
	add a second one. (Preserves compatibility with an old hacky way
	that people might have been handling HEAD from SoupServer.)

	* README: update to mention mailing list and bugzilla

	* HACKING: kill this since there's nothing here that isn't either
	obvious, or redundant with the README

2006-07-21  Dan Winship  <danw@novell.com>

	* libsoup/soup-server-message.c (soup_server_message_init):
	initialize encoding to SOUP_TRANSFER_CONTENT_LENGTH rather than
	SOUP_TRANSFER_UNKNOWN, since SOUP_TRANSFER_UNKNOWN has never
	actually worked here, and so there was an undocumented requirement
	that you manually set the encoding on every response
	(which SoupServer itself was not doing on internal errors).
	Problem pointed out by Dennis Jacobfeuerborn on libsoup-list.
	(soup_server_message_set_encoding): reject the new
	SoupTransferEncoding values, for compatibility

	* libsoup/soup-message.h (SoupTransferEncoding): Clarify that
	SOUP_TRANSFER_UNKNOWN is essentially an error value, since in the
	public API, it always has been, due to bugs. Add some new values,
	currently just for internal use: SOUP_TRANSFER_NONE (for cases
	like HEAD which never have a body), SOUP_TRANSFER_EOF (to replace
	SOUP_TRANSFER_UNKNOWN), and SOUP_TRANSFER_BYTERANGES (which isn't
	actually implemented yet).

	* libsoup/soup-message.c (soup_message_get_request_encoding,
	soup_message_get_response_encoding): figure out the body encoding
	being used by the request/response, including all the tricky
	cases like HEAD/1xx/etc.
	(soup_message_is_keepalive): if the response encoding is
	SOUP_TRANSFER_EOF, then the message isn't keepalive.

	* libsoup/soup-message-client-io.c (parse_response_headers): use
	soup_message_get_response_encoding.

	* libsoup/soup-message-server-io.c (parse_request_headers): use